kubernetes/access-logs/manifests/promtail-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: loki-promtail
  namespace: loki
  labels:
    app.kubernetes.io/name: promtail
spec:
  type: ClusterIP
  ports:
    - name: http-metrics
      port: 3101
      protocol: TCP
  selector:
    app.kubernetes.io/name: promtail
