kubernetes/access-logs/manifests/api-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: api-gateway
  namespace: consul
spec:
  gatewayClassName: consul-api-gateway
  listeners:
  - protocol: HTTP
    port: 30080
    name: http
    allowedRoutes:
      namespaces:
        from: All
