kubernetes/access-logs/manifests/routes.yaml
# ---
# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: HTTPRoute
# metadata:
#   name: consul-ui
#   namespace: consul
# spec:
#   parentRefs:
#   - name: api-gateway
#   rules:
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /consul
#     backendRefs:
#     - kind: Service
#       name: consul-ui
#       namespace: consul
#       port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: loki
spec:
  parentRefs:
  - name: api-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /grafana
    backendRefs:
    - kind: Service
      name: loki-graphana
      # namespace: loki
      port: 80
# ---
# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: HTTPRoute
# metadata:
#   name: wordpress
#   namespace: wordpress
# spec:
#   parentRefs:
#   - name: api-gateway
#   rules:
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /
#     backendRefs:
#     - kind: Service
#       name: wordpress
#       # namespace: wordpress
#       port: 80
